# ossin

./: .gitignore  CHANGELOG.md  CLAUDE.md  GUIDE.md  LICENSE  PYPI_README.md  README.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: cd.yml  ci.yml  workflow.yml
src/hasansezertasan/: main.py
src/ossin/: __main__.py  cli.py  core.py
tests/: __init__.py
