[project]
name = "ossin"
description = "What is OS's sin? 🤔 A beautiful system information utility that displays basic information about your operating system, Python environment, and platform details using Rich for stunning terminal output."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" }
]
dynamic = ["version"]
keywords = ["system", "information", "cli", "monitoring"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.8"
dependencies = ["typer"]


[project.urls]
Documentation = "https://github.com/ankara-python-toplulugu/ossin#readme"
Issues = "https://github.com/ankara-python-toplulugu/ossin/issues"
Source = "https://github.com/ankara-python-toplulugu/ossin"


[project.scripts]
ossin = "ossin.cli:app"


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"


[tool.hatch.build]
hooks.vcs.version-file = "src/ossin/_version.py"


[tool.hatch.version.raw-options]
version_scheme = "only-version"
local_scheme = "no-local-version"
