[project]
name = "ossin"
description = "What is OS's sin? 🤔 A beautiful system information utility that displays basic information about your operating system, Python environment, and platform details using Rich for stunning terminal output."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" }
]
maintainers = [
    { name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" }
]
dynamic = ["version"]
keywords = [
  "utility",
  "command-line",
  "cli",
  "system",
  "information",
  "monitoring",
  "ossin",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Topic :: Terminals",
  "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.16.0",
]


[project.optional-dependencies]
cli = ["typer"]


[project.urls]
changelog = "https://github.com/python-ankara-toplulugu/ossin/blob/main/CHANGELOG.md"
documentation = "https://github.com/python-ankara-toplulugu/ossin#readme"
homepage = "https://github.com/python-ankara-toplulugu/ossin"
issues = "https://github.com/python-ankara-toplulugu/ossin/issues"
releasenotes = "https://github.com/python-ankara-toplulugu/ossin/releases"
source = "https://github.com/python-ankara-toplulugu/ossin.git"


[project.scripts]
ossin = "ossin.cli:app"


[dependency-groups]
dev = [
    "ossin[cli]",
    "mypy",
    "pyright",
    "ty",
    "pyrefly",
    "ruff",
    "validate-pyproject[all]",
    "vulture",
]


[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } },
]
trusted-publishing = "always"


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"


[tool.hatch.build]
hooks.vcs.version-file = "src/ossin/_version.py"


[tool.hatch.version.raw-options]
version_scheme = "only-version"
local_scheme = "no-local-version"


[tool.vulture]
ignore_decorators = ["@app.command"]
paths = ["src", "tests"]


[tool.slotscheck]
strict-imports = false


[tool.ruff]
fix = true
output-format = "full"
preview = true
show-fixes = true
src = ["src", "tests", "examples"]
target-version = "py310"
unsafe-fixes = true


[tool.ruff.analyze]
detect-string-imports = true
preview = true


[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
preview = true


[tool.ruff.lint]
fixable = ["ALL"]
ignore = ["B008", "COM812", "FBT001","FBT003"]
preview = true
select = ["ALL"]


[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true


[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true


# TODO @hasansezertasan: Update the author name and email
[tool.ruff.lint.flake8-copyright]
author = "Hasan Sezer Taşan <hasansezertasan@gmail.com>"


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"


[tool.ruff.lint.pydocstyle]
convention = "pep257"


[tool.ruff.lint.ruff]
parenthesize-tuple-in-subscript = true


[tool.ruff.lint.mccabe]
max-complexity = 4


[tool.mypy]
files = ["src"]
pretty = true
python_version = "3.10"
show_error_codes = true
strict = true


[tool.pyright]
include = ["src/ossin"]


[tool.ty.src]
include = ["src", "tests"]
respect-ignore-files = false


[tool.ty.environment]
python-version = "3.10"


[tool.ty.terminal]
error-on-warning = true


[tool.pyrefly]
python-version = "3.10"
project-includes = ["src"]
